<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/basic_settings"
		android:enabled="true">
		<EditTextPreference
			android:key="vpn_addresses"
			android:title="@string/vpn_addresses"
			android:dialogMessage="@string/vpn_addresses_message"
			android:defaultValue="10.1.10.1&#10;fd00:1:fd00:1:fd00:1:fd00:1"
			android:minLines="2" />
		<CheckBoxPreference
			android:key="enable_ipv6"
			android:title="@string/enable_ipv6"
			android:defaultValue="true" />
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/applications_settings"
		android:enabled="true">
		<ListPreference
			android:key="app_list_type"
			android:title="@string/app_list_type"
			android:defaultValue="BLACKLIST"
			android:entries="@array/app_list_type"
			android:entryValues="@array/app_list_type_values"
			android:negativeButtonText="@null"
			android:positiveButtonText="@null"/>
		<PreferenceScreen
			android:fragment="io.github.ulysseszh.sunproxy.SettingsActivity$BlacklistFragment"
			android:key="blacklist"
			android:title="@string/blacklist"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<PreferenceScreen
			android:fragment="io.github.ulysseszh.sunproxy.SettingsActivity$WhitelistFragment"
			android:key="whitelist"
			android:title="@string/whitelist"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<PreferenceScreen
			android:key="clear_app_list"
			android:title="@string/clear_app_list" />

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/vpn_dns"
		android:enabled="true">
		<CheckBoxPreference
			android:key="use_default_dns"
			android:title="@string/use_default_dns"
			android:defaultValue="true" />
		<EditTextPreference
			android:key="dns_list"
			android:title="@string/dns_list"
			android:dialogMessage="@string/dns_list_message"
			android:minLines="2"
			android:defaultValue="8.8.8.8&#10;8.8.4.4" />
		<EditTextPreference
			android:key="hosts"
			android:title="@string/hosts"
			android:dialogMessage="@string/hosts_message"
			android:minLines="2"
			android:defaultValue="" />
		<EditTextPreference
			android:key="search_domains"
			android:title="@string/search_domains"
			android:dialogMessage="@string/search_domains_message"
			android:minLines="2"
			android:defaultValue="" />
	</PreferenceCategory>
</PreferenceScreen>
