<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="io.github.ulysseszh.sunproxy.MainActivity"
	tools:showIn="@layout/activity_main">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"
		android:orientation="vertical"
		app:layout_constraintStart_toStartOf="parent">

		<EditText
			android:id="@+id/redirect_rule"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:autofillHints="none"
			android:fontFamily="monospace"
			android:hint="@string/redirect_rule_hint"
			android:inputType="textMultiLine"
			android:minWidth="10dp"
			android:textSize="24sp" />

		<Button
			android:id="@+id/start"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/start" />

		<Button
			android:id="@+id/stop"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/stop" />

	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
